# m6

./: .gitignore  Cargo.toml  README.md  m6_ex2_2_a.html  m6_ex2_2_b.html  m6_ex4_2_a.html  m6_ex5_a.html  m6_ex5_b.html  m6_ex6_2_a.html  m6_ex6_2_b.html  m6_ex6_2_d.html  m6_ex6_2_e.html  m6_mc_1_delta.html
answers/: m6.tex
mc_code/: Cargo.toml
mc_code/src/: main.rs  monad_rng.rs  photon_gas.rs  quadrature.rs
md_code/: Cargo.toml
md_code/src/: main.rs
plots/: m6_ex2_1.html  m6_ex2_2_b.html  m6_ex2_3_comb.html  m6_ex4_1_a.html  m6_ex4_1_b.html  m6_ex4_2_a.html  m6_ex4_2_b.html  m6_ex6_1.html  m6_ex6_2_c.html  m6_mc_1.html  m6_mc_1_delta.html
xyz-tools/: Cargo.toml
xyz-tools/src/: deserializer.rs  diffusion.rs  lib.rs  polymer.rs  potential_energy.rs  pressure.rs  radial_distribution.rs  random_v.rs
