[workspace]
resolver = "2"
members = [
"mc_code",
"md_code",
"xyz-tools",
]

[workspace.dependencies]
serde = {version = "1.0.196", features = ["derive"]}
xyz-tools = {path = "xyz-tools"}
itertools = "0.12.1"
plotly = { version = "0.8.4" }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
winnow = "0.5.36"
rayon = "1.8.1"
assert_approx_eq = "1.1.0"

[workspace.lints.clippy]
pedantic = "warn"
suspicious = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
# cargo = "warn"
imprecise_flops = "warn"
module_name_repetitions = {level =  "allow", priority = 1}
uninlined_format_args = {level =  "allow", priority = 1}
missing_errors_doc = {level =  "allow", priority = 1}


[profile.release]
debug = true
lto = true
