[workspace]
resolver = "2"
members = [
"mc_code",
"md_code",
"xyz-tools",
]

[workspace.dependencies]
serde = {version = "1.0.196", features = ["derive"]}
xyz-tools = {path = "xyz-tools"}
itertools = "0.12.1"
plotly = { version = "0.8.4" }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
winnow = "0.6.2"
rayon = "1.8.1"
assert_approx_eq = "1.1.0"

[workspace.lints.clippy]
pedantic = "warn"
suspicious = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
# cargo = "warn"
imprecise_flops = "warn"
module_name_repetitions = {level =  "allow", priority = 1}
uninlined_format_args = {level =  "allow", priority = 1}
missing_errors_doc = {level =  "allow", priority = 1}
missing_panics_doc = {level =  "allow", priority = 1}
# eant these to not warn as spend a lot of instance converting between f64 and usize
cast_precision_loss = {level =  "allow", priority = 1}
cast_possible_truncation = {level =  "allow", priority = 1}
cast_sign_loss = {level =  "allow", priority = 1}
# we do acc want floats to be parsed precisely
float_cmp = {level =  "allow", priority = 1}

[workspace.lints.rust]
non_upper_case_globals = {level =  "allow", priority = 1}

[profile.release]
debug = true
lto = true
codegen-units = 1
