[package]
name = "mc_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_xoshiro = { workspace = true }
plotly = {workspace = true}

[lints]
workspace = true

[features]
default = ["png"]
png = ["plotly/kaleido"]
