[package]
name = "xyz-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
assert_approx_eq = { workspace = true }

[lints]
workspace = true
